# wenjin

./: .env  .env.docker-cn.example  .env.example  .env.prebuilt.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  PRODUCT.md  README.md  docker-compose.local-build.yml  docker-compose.prebuilt.yml  docker-compose.yml  nginx.conf  start.sh
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.visual-sandbox  Makefile  README.md  alembic.ini  config.yaml  docker-compose.yml  extensions_config.json  langgraph.json  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_add_task_records_table.py  003_add_chat_threads_table.py  004_add_workspace_literature_table.py  005_add_credit_and_admin_dashboard_tables.py  006_add_artifact_version_unique_constraint.py  007_chat_threads_model_default_alias.py  008_add_users_last_login_column.py  009_add_refresh_token_tracking.py  010_add_chat_thread_skill.py  011_add_task_runtime_state.py  012_add_subagent_task_records.py  013_add_chat_token_consume_type.py  014_schema_parity_papers_and_citations.py  015_drop_paper_chunk_embedding.py  016_add_workspace_templates.py  017_add_latex_core_tables.py  018_add_execution_sessions.py  019_add_subagent_execution_session_link.py  020_enforce_subagent_execution_session_required.py  021_add_subagent_execution_session_fk.py  022_rename_chat_credit_types_to_thread.py  023_rename_chat_threads_table_to_threads.py  024_add_thread_summary_columns.py  025_db_model_hardening_indexes_and_constraints.py  026_add_task_active_dedupe_partial_index.py  027_add_compute_sessions.py  028_reference_library_rebuild.py  029_add_subagent_output_column.py  030_create_executions_and_execution_nodes.py  031_add_workspace_thread_link.py  032_create_workspace_settings.py  033_create_library_items.py  034_create_documents_v2.py  035_create_decisions.py  036_create_memory_facts.py  037_create_run_history.py  038_create_sandboxes.py  039_create_workspace_tasks.py  03f821b6953f_subagent_task_add_criticality_column.py  (+75 more)
backend/backend/.wenjin/: memory.json
backend/docs/: README.md  async-task-system.md
backend/docs/architecture/: langgraph-workspace-architecture.md
backend/docs/plans/: 2026-03-10-citation-implementation-plan.md  2026-03-10-citation-management-design.md  2026-03-10-execution-service-design.md  2026-03-10-execution-service-implementation.md  2026-03-10-workspace-paper-optimization-design.md  2026-03-10-workspace-paper-optimization-plan.md  2026-03-11-async-task-system-design.md  2026-03-11-async-task-system.md  2026-03-11-stability-quality-phase-design.md  2026-03-11-stability-quality-phase.md  2026-03-11-thesis-execution-service-integration.md  2026-03-11-thesis-handover.md  2026-03-11-thesis-phase1-design.md  2026-03-11-thesis-phase1-implementation.md  2026-03-11-undergraduate-thesis.md  2026-03-11-workflow-integration-design.md  2026-03-11-workflow-integration-plan.md  2026-03-29-chat-safety-net.md  2026-03-29-dead-code-cleanup-design.md  2026-03-29-dead-code-cleanup.md  2026-03-29-frontend-redesign-design.md  2026-03-29-frontend-redesign.md  README.md
backend/scripts/: backfill_capability_runtime_from_registry.py  backfill_executions.py  migrate_workspace_features_to_seed_yaml.py  migrate_workspace_v2.py  sync_capability_runtime_back_to_yaml.py  workspace_prism_integrity_report.py
backend/seed/agent_templates/: citation_auditor.yaml  critical_reviewer.yaml  document_architect.yaml  evidence_analyst.yaml  figure_table_engineer.yaml  generalist_assistant.yaml  literature_synthesizer.yaml  manuscript_writer.yaml  methodologist.yaml  research_planner.yaml  research_scholar.yaml  research_scout.yaml  writing_editor.yaml
backend/seed/latex_templates/: registry.yaml
backend/seed/skills/: academic-visual-engineer.yaml  citation-auditor.yaml  claim-strategist.yaml  claim-verifier.yaml  compliance-auditor.yaml  compliance-reviewer.yaml  document-outline-builder.yaml  evidence-analyst.yaml  evidence-synthesizer.yaml  experiment-analyst.yaml  figure-designer.yaml  figure-engineer.yaml  figure-table-engineer.yaml  format-compliance-checker.yaml  framework-designer.yaml  grant-planner.yaml  journal-recommender.yaml  literature-reviewer.yaml  literature-synthesizer.yaml  manuscript-architect.yaml  manuscript-writer.yaml  method-design.yaml  methodology-designer.yaml  novelty-mapper.yaml  paper-analyst.yaml  patent-drafter.yaml  patent-examiner-rules.yaml  patent-strategist.yaml  peer-reviewer.yaml  prior-art-searcher.yaml  proposal-panel-rules.yaml  proposal-writer.yaml  quality-critic.yaml  query-planner.yaml  reporting-guideline-checker.yaml  reproducibility-auditor.yaml  research-scout.yaml  review-critic.yaml  scholar-searcher.yaml  sci-journal-rules.yaml  (+12 more)
backend/src/: __init__.py  logging_config.py  workspace_events.py
backend/src/academic/: __init__.py
backend/src/academic_visual_runtime/: __init__.py  contracts.py  image_provider.py  overlay.py  prompt_compiler.py  quality.py  router.py  runtime.py
backend/src/agents/: __init__.py  thesis_lead_agent.py  thread_state.py  workspace_lead_agent.py
backend/src/api/: subagents.py
backend/src/application/: commands.py  errors.py  results.py  workspace_resolvers.py
backend/src/artifacts/: __init__.py  types.py
backend/src/billing/: __init__.py  policies.py  reservation_metadata.py
backend/src/compute/: __init__.py  dispatch_service.py  events.py  models.py  projection_service.py  session_service.py
backend/src/config/: __init__.py  app_config.py  config_loader.py  extensions_config.py  feature_flags.py  llm_config.py  task_config.py
backend/src/contracts/: __init__.py  archive_filename.py  billing.py  catalog_validation.py  change_set.py  figure_generation.py  mission_budget.py  mission_input.py  mission_policy.py  mission_write_authority.py  model_usage.py  pricing_snapshot.py  prism_context.py  prism_visual_insertion.py  reasoning.py  research_evidence.py  review_policy.py  (+7 more)
backend/tests/: __init__.py  conftest.py  test_execution_display_name.py  test_workspace_events.py
(+2700 files in other folders)
