[project]
name = "academiagpt"
version = "2.0.0"
description = "Academic AI Assistant with Lead Agent + Middleware + Skills architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AcademiaGPT Team" }]
dependencies = [
    "langgraph>=0.2.60",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "tenacity>=9.0.0",
    # Academic dependencies
    "semanticscholar>=0.4.0",
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 240
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line too long
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends pattern)
    "E402",  # Module level import not at top of file (FastAPI router pattern)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
