[project]
name = "wenjin"
version = "2.0.0"
description = "问津 Wenjin — AI workspace for papers, proposals, patents, and research workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Wenjin Team" }]
dependencies = [
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-anthropic>=0.3.0,<0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jsonschema>=4.23.0,<5.0.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.17",
    "httpx[socks]>=0.28.0",
    "tenacity>=9.0.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",  # Celery monitoring UI
    # Academic dependencies
    "pymupdf>=1.24.0",
    "pillow>=11.3.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0,<5.0.0",
    "aiosmtplib>=3.0.0",  # Async SMTP for email verification
    "docker>=7.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "prometheus-client>=0.21.0",
    "croniter>=2.0.0",
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "python-pptx>=1.0,<2",
    "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 240
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line too long
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends pattern)
    "E402",  # Module level import not at top of file (FastAPI router pattern)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:.*AgentStatePydantic has been moved to `langchain.agents`.*:Warning",
    "ignore:.*create_react_agent has been moved to `langchain.agents`.*:Warning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:coroutine 'Connection._cancel' was never awaited:RuntimeWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (require external services like Docker)",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "call-overload",
    "comparison-overlap",
    "import-untyped",
    "index",
    "list-item",
    "method-assign",
    "misc",
    "operator",
    "return-value",
    "typeddict-item",
    "union-attr",
    "valid-type",
    "var-annotated",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "greenlet>=3.3.2",
    "syrupy>=5.1.0",
]
